src/components/rockets/rocketsCard.css
.fetchStatus,
.error {
  text-align: center;
}

.error {
  color: red;
}

.rocketsList {
  width: 90%;
  margin: auto;
}

li.rocketCard {
  display: flex;
  gap: 15px;
  padding: 15px;
  font-family: Arial, Helvetica, sans-serif;
}

img.rocketCard {
  width: 21%;
}

li.rocketCard > .wrapper {
  display: flex;
  flex-direction: column;
  gap: 21px 0;
}

h3.rocketCard {
  font-size: 1.5rem;
  opacity: 0.9;
}

.reservedTag {
  background-color: rgb(82, 191, 228);
  padding: 5px;
  color: #fff;
  border-radius: 5px;
  display: inline-block;
}

button.rocketCard {
  width: 150px;
  padding: 15px;
  background-color: rgb(82, 191, 228);
  border: none;
  border-radius: 5px;
  color: #fff;
  cursor: pointer;
}

button.rocketCard.cancelBtn {
  background-color: #fff;
  color: gray;
  border: 1px solid gray;
  box-shadow: 1px 1px 1px gray;
}

